--- a/Aula3/style.css
+++ b/Aula3/style.css
@@ -7,7 +7,7 @@
     flex-direction: row;
     gap: 15px;
     justify-content: center;
-    align-items:center;
+    align-items: center;
 }
 
 .item {
@@ -16,11 +16,11 @@
     border: 4px solid darkslategray;
 }
 
-.thereway_flex{
+.thereway_flex {
     background-color: green;
     text-align: center;
     height: 300px;
-    
+
     display: flex;
     /* flex-direction: column; */
     flex-direction: row;
@@ -35,7 +35,7 @@
     /* align-items: flex-end; */
 }
 
-.thereway_flex > div {
+.thereway_flex>div {
     background-color: #f4f4f4;
     width: 80px;
     height: 90px;
@@ -43,7 +43,7 @@
     font-size: 40px;
 }
 
-.main-container{
+.main-container {
     display: flex;
     height: 400px;
     flex-wrap: wrap;
@@ -62,19 +62,23 @@
 
 .flex-container {
     display: flex;
+
 }
 
-.flex-container div {
-    background-color: peachpuff;
-    border: 4px solid brown;
-    height: 100px;
+.one,
+.three {
     flex: 1;
 }
 
-.flex-container .two {
-    flex: 2;
+.one,
+.two,
+.three {
+    background: peachpuff;
+    border: 4px solid brown;
+    height: 100px;
 }
 
-.flex-container .three {
+.two {
     flex-shrink: 0;
+    width: 300px;
 }
