--- a/Aula3/exercicios/exec5/style.css
+++ b/Aula3/exercicios/exec5/style.css
@@ -15,18 +15,32 @@ body {
     justify-content: center;
 }
 
-
-
 .modal {
     background: white;
     width: 480px;
     border-radius: 10px;
     box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
 }
 
-.cabecalho {
+.title {
+    display: flex;
+    gap: 16px;
+    font-size: 18px;
+}
+
+.title-closed {
     display: flex;
     justify-content: space-between;
+}
+
+.text-btn {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-left: 55px;
 }
 
 .icon {
