--- a/Aula3/exercicios/exec6/style.css
+++ b/Aula3/exercicios/exec6/style.css
@@ -5,6 +5,8 @@ body {
     margin: 0;
     overflow: hidden;
     font-family: Roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 img {
@@ -25,3 +27,44 @@ input {
     width: 400px;
     margin-bottom: 16px;
 }
+
+a {
+    /* isso remove a linha sob nossos links */
+    text-decoration: none;
+    color: rebeccapurple;
+    font-size: 12px;
+}
+
+li {
+    list-style-type: none;
+}
+
+.left-links,
+.right-links {
+    display: flex;
+    margin: 5px;
+    padding: 5px;
+    gap: 12px;
+    
+}
+
+.header,
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: auto;
+    
+}
+
+.footer {
+    background-color :#eeeeee;
+    margin-top: auto;
+    align-items: center;
+}
+
