--- a/Aula3/exercicios/exec7/style.css
+++ b/Aula3/exercicios/exec7/style.css
@@ -1,29 +1,67 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    font-size: 24px;
+    text-decoration: none;
+    color: white;
 }
 
 .header {
     height: 72px;
     background: darkmagenta;
     color: white;
+    font-size: 32px;
+    font-weight: 900px;
+    display: flex;
+    align-items: center;
+}
+
+.container {
+    display: flex;
 }
 
 .footer {
     height: 72px;
     background: #eee;
     color: darkmagenta;
+    display: flex;
+    margin-top: auto;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .sidebar {
     width: 300px;
     background: royalblue;
+    position: fixed;
+    height: 100%;    
+}
+
+.container-card {
+    padding: 32px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-left: 300px;
 }
 
 .card {
     border: 1px solid #eee;
     box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
     border-radius: 4px;
+    padding: 32px;
+    width: 250px;
 }
