--- a/meme-generator/src/components/style.css
+++ b/meme-generator/src/components/style.css
@@ -12,6 +12,10 @@ body {
     font-size: 1.3rem;
 }
 
+main {
+    padding: 36px;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -90,9 +94,47 @@ nav p {
     color: #FFF;
 }
 
-
+.div-img-aleatoria {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .img-aleatoria {
-    margin-top: 30px;
-    flex-shrink: 0;
+    max-width: 100%;
+    border-radius: 3px;
+}
+
+.meme-text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
 }
